--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-openapi": "^12.1.0",
     "express-session": "^1.17.3",
-    "mongoose": "^7.2.0"
+    "mongoose": "^7.2.0",
+    "openai": "^3.2.1",
+    "openapi": "^1.0.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
