--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "express-openapi": "^12.1.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.0",
